test ui components, prep for aws

--- a/src/main/webapp/myforum/index.html
+++ b/src/main/webapp/myforum/index.html
@@ -3,12 +3,12 @@
 
 <meta charset="UTF-8">
 
-<script type="text/javascript" src="callbackAjax.js"></script>
-<script type="text/javascript" src="ajaxUsers.js"></script>
-<script type="text/javascript" src="ajaxMessaging.js"></script>
-<script type="text/javascript" src="ajaxSubforums.js"></script>
-<script type="text/javascript" src="ajaxPosts.js"></script>
-<script type="text/javascript" src="ajaxComments.js"></script>
+<script type="text/javascript" src="ajax/callbackAjax.js"></script>
+<script type="text/javascript" src="ajax/ajaxUsers.js"></script>
+<script type="text/javascript" src="ajax/ajaxMessaging.js"></script>
+<script type="text/javascript" src="ajax/ajaxSubforums.js"></script>
+<script type="text/javascript" src="ajax/ajaxPosts.js"></script>
+<script type="text/javascript" src="ajax/ajaxComments.js"></script>
 
 </head>
 <body>
